--- a/style.css
+++ b/style.css
@@ -4,7 +4,61 @@
   box-sizing: border-box;
 }
 
+:root {
+  /* BACKGROUND COLORS */
+  --bg-primary-color: #0d0d0d;
+
+  /* TEXT COLORS */
+  --text-primary-color: #f2f0f0;
+
+  /* PADDING */
+  --space-xs: 4px;
+  --space-sm: 8px;
+  --space-md: 16px;
+  --space-lg: 24px;
+  --space-xl: 32px;
+  --space-2xl: 40px;
+  --space-3xl: 48px;
+
+  /* BORDER COLORS */
+  --border-primary-color: #333333;
+
+  /* BORDER RADIUS */
+  --border-radius-xs: 4px;
+  --border-radius-sm: 8px;
+  --border-radius-md: 16px;
+  --border-radius-lg: 20px;
+  --border-radius-xl: 24px;
+}
+
 html, body {
   height: 100%;
   width: 100%;
+}
+
+body {
+  background-color: var(--bg-primary-color);
+  color: var(--text-primary-color);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main,
+section {
+  width: 100%;
+  height: 100%;
+}
+
+section {
+  padding: var(--space-2xl);
+}
+
+section .infos {
+  display: flex;
+  justify-content: space-between;
+}
+
+.info {
+  padding: var(--space-sm) var(--space-md);
+  border: 1px solid var(--border-primary-color);
+  border-radius: var(--border-radius-sm);
 }
